fix for bug #4082: Integer lengths cause truncation with DISTINCT CONCAT and InnoDB